Cropped the main picture in hopes of fixing display issues

--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@ footer {
 @media screen and (max-width: 350px) {
 #home {
     background-position: 50% 0px;
-    background-size: 50%;
+    background-size: contain;
 }
 #home h1 {
     font-size: 3em;   
@@ -593,7 +593,7 @@ footer {
 @media screen and (min-width: 1000px) {
 #home {
     background-position: 50% -100px;
-    background-size: 50%;
+    background-size: contain;
 }
      
 /*End media query 1000px*/    }
